--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!--  <script type='text/javascript'>
+    document.write('<base href="' + window.location.href+ '" />');
+  </script>-->
+
   <meta charset="utf-8">
   <title>OssSpa</title>
   <base href="/">
